[package]
name = "todo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo = "0.8.0"
#serde = "1.0.160"
#serde_json = "1.0.96"
wasm-bindgen = "0.2.84"
yew = { version="0.19.3" }
stylist = {version="0.10.0" , features=["yew"]}
web-sys = { version="0.3.61", features=["HtmlInputElement"]}
